--- a/athena/index.html
+++ b/athena/index.html
@@ -106,11 +106,11 @@
 							alt="Segundo slide"></a>
 				</div>
 				<div class="carousel-item">
-					<a href="resultadobuscapc.html?d=&a=&p=0"><img class="d-block w-100" src="img/home/carousel/03.png"
+					<a href="buscacomputador.html"><img class="d-block w-100" src="img/home/carousel/03.png"
 							alt="Terceiro slide"></a>
 				</div>
 				<div class="carousel-item">
-					<a href="https://proativa.virtual.ufc.br/athena/resultadobuscaand.html?d=&a=&p=0"><img
+					<a href="buscaandroid.html"><img
 							class="d-block w-100" src="img/home/carousel/04.png" alt="Quarto slide"></a>
 				</div>
 				<div class="carousel-item">
