Botão para o topo do card de dúvidas

--- a/athena/duvidas.html
+++ b/athena/duvidas.html
@@ -99,12 +99,13 @@
 							</div>
 						</div>
 						<div class="col-sm-10">
-							<div id="extrair" class="panel panel-default boxie">
+							<div class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
 									<h4 class="panel-title titulo4A">
-										<a class="dropdown-toggle collapseColorA" data-toggle="collapse"
-											data-parent="#accordion" href="#collapse3">COMO POSSO FAZER O DOWNLOAD
+										<a id="downloadCompleto" class="dropdown-toggle collapseColorA"
+											data-toggle="collapse" data-parent="#accordion" href="#collapse3">COMO POSSO
+											FAZER O DOWNLOAD
 											COMPLETO DO REPOSITÓRIO ATHENA?</a>
 									</h4>
 								</div>
@@ -130,6 +131,8 @@
 												selecionar a disciplina e o ano desejado para encontrar todos os RED da
 												categoria escolhida.</li><br>
 											<img src="img/duvidas/t6.png" class="imgTexto"><br><br><br>
+											<a href="#downloadCompleto"><img src="img/paraTopoA.svg"
+													class="imgTexto"></a><br><br><br>
 										</ol>
 									</div>
 								</div>
@@ -146,11 +149,11 @@
 							</div>
 						</div>
 						<div class="col-sm-10">
-							<div id="habilitarflash" class="panel panel-default boxie">
+							<div class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
 									<h4 class="panel-title titulo4V">
-										<a class="dropdown-toggle collapseColorV" data-toggle="collapse"
+										<a id="habilitarflash" class="dropdown-toggle collapseColorV" data-toggle="collapse"
 											data-parent="#accordion" href="#collapse5">QUAL É O TAMANHO RECOMENDADO DE
 											UM <i>PEN DRIVE</i> PARA O DOWNLOAD COMPLETO DO REPOSITÓRIO ATHENA?</a>
 									</h4>
@@ -177,7 +180,7 @@
 							<div class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
-									<h4 class="panel-title titulo4A"> <a class="dropdown-toggle collapseColorA"
+									<h4 class="panel-title titulo4A"> <a id="extrair" class="dropdown-toggle collapseColorA"
 											data-toggle="collapse" data-parent="#accordion" href="#collapse2">COMO
 											EXTRAIR OS ARQUIVOS COM OS RED PARA COMPUTADOR APÓS O DOWNLOAD?</a>
 									</h4>
@@ -200,7 +203,7 @@
 											site do programa. Confira se a linguagem está para “Português brasileiro” e,
 											em seguida, clique em “Continuar para baixar WinRAR”.<br><br>
 											<img src="img/duvidas/d2.png" class="imgTexto"><br><br><br>
-											<b>PeaZip:</b> <a href="https://www.peazip.org/">Clique aqui</a> para
+											<b>PeaZip:</b> <a href="https://peazip.github.io/">Clique aqui</a> para
 											acessar o site do programa. Na imagem, duas opções de download são
 											mostradas. Selecione a opção adequada para o sistema do seu
 											computador.<br><br>
@@ -215,6 +218,9 @@
 												Flash habilitado.</li><br>
 											<img src="img/duvidas/a6.png" class="imgTexto"><br><br>
 											<li>Pronto! Agora você já possui o RED selecionado em seu computador.</li>
+											<br><br><br>
+											<a href="#extrair"><img src="img/paraTopoA.svg"
+													class="imgTexto"></a><br><br><br>
 										</ol>
 									</div>
 								</div>
@@ -231,11 +237,11 @@
 							</div>
 						</div>
 						<div class="col-sm-10">
-							<div id="caixa1" class="panel panel-default boxie">
+							<div  class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
 									<h4 class="panel-title titulo4V">
-										<a class="dropdown-toggle collapseColorV" data-toggle="collapse"
+										<a id="downloadRecursos" class="dropdown-toggle collapseColorV" data-toggle="collapse"
 											data-parent="#accordion" href="#collapse1">COMO POSSO FAZER O DOWNLOAD DOS
 											RECURSOS PARA COMPUTADOR?</a>
 									</h4>
@@ -258,12 +264,17 @@
 											<li>Clique com o botão direito no arquivo baixado e selecione a opção
 												“Extrair aqui” para extrair o RED.</li><br>
 											<img src="img/duvidas/a5.png" class="imgTexto"><br><br><br>
-											<li>Após isso, o recurso estará no formato .swf e poderá ser executado com o auxílio 
-												do programa Adobe Flash Projector. Caso ainda não possua o programa em seu computador, 
-												<a href="#flashprojector">clique aqui</a> para acessar o rutorial de como baixá-lo para, em seguida, executar 
+											<li>Após isso, o recurso estará no formato .swf e poderá ser executado com o
+												auxílio
+												do programa Adobe Flash Projector. Caso ainda não possua o programa em
+												seu computador,
+												<a href="#flashprojector">clique aqui</a> para acessar o rutorial de
+												como baixá-lo para, em seguida, executar
 												o RED.
 											</li><br>
-											<img src="img/duvidas/a6.png" class="imgTexto"><br>
+											<img src="img/duvidas/a6.png" class="imgTexto"><br><br><br>
+											<a href="#downloadRecursos"><img src="img/paraTopoV.svg"
+													class="imgTexto"></a><br><br><br>
 										</ol>
 
 									</div>
@@ -281,12 +292,13 @@
 							</div>
 						</div>
 						<div class="col-sm-10">
-							<div id="flashprojector" class="panel panel-default boxie">
+							<div  class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
-									<h4 class="panel-title titulo4A"> <a id="flash" class="dropdown-toggle collapseColorA"
-											data-toggle="collapse" data-parent="#accordion" href="#collapse4"
-											>O ATHENA PRECISA DE ALGUM PROGRAMA
+									<h4 class="panel-title titulo4A"> <a id="flashprojector"
+											class="dropdown-toggle collapseColorA" data-toggle="collapse"
+											data-parent="#accordion" href="#collapse4">O ATHENA PRECISA DE ALGUM
+											PROGRAMA
 											ESPECÍFICO PARA A EXECUÇÃO DOS RED PARA COMPUTADOR? </a>
 									</h4>
 								</div>
@@ -320,7 +332,8 @@
 											<img src="img/duvidas/p2.png" class="imgTexto"><br><br><br>
 											<li>Para configurar, usaremos, como exemplo, o RED "A História da Páscoa".
 												<a href="recursos/recurso/Portugues/1/ahistoriadapascoa.rar"
-													target="_blank">Clique aqui</a> para baixá-lo.</li><br>
+													target="_blank">Clique aqui</a> para baixá-lo.
+											</li><br>
 											<li>Extraia o RED, clicando com o botão direito do arquivo baixado e
 												selecione "Extrair aqui..."</li><br>
 											<img src="img/duvidas/p4.png" class="imgTexto"><br><br><br>
@@ -346,6 +359,8 @@
 												abrir um RED nesse mesmo formato, basta clicar duas vezes no próprio
 												recurso.</li><br>
 											<img src="img/duvidas/p10.png" class="imgTexto"><br><br><br>
+											<a href="#flashprojector"><img src="img/paraTopoA.svg"
+													class="imgTexto"></a><br><br><br>
 										</ol>
 									</div>
 								</div>
@@ -460,6 +475,30 @@
 				scrollTop: targetOffset - 100
 			}, 500);
 		});
+
+		$('ol a[href^="#"]').on('click', function (e) {
+			e.preventDefault();
+			var id = $(this).attr('href'),
+				targetOffset = $(id).offset().top;
+
+			$('html, body').animate({
+				scrollTop: targetOffset - 100
+			}, 500);
+
+			id2 = id.split('#');
+			clicarDepoisDe(0.5, id2[1]);
+		});
+
+		function delay(n) {
+			return new Promise(function (resolve) {
+				setTimeout(resolve, n * 1000);
+			});
+		}
+
+		async function clicarDepoisDe(s, id) {
+			await delay(s);
+			document.getElementById(id).click();
+		}
 	</script>
 </body>
 
