Alteração na página de dúvidas

--- a/athena/duvidas.html
+++ b/athena/duvidas.html
@@ -303,28 +303,16 @@
 									</h4>
 								</div>
 								<div id="collapse4" class="panel-collapse collapse in">
-									<div class="panel-body corpoTexto"><br>Sim. Para executar alguns recursos,
-										recomendamos habilitar o "Flash" em seu navegador. Por padrão, os navegadores
-										estão com o "Flash" desabilitado e alguns recursos do repositório precisam desta
-										tecnologia para serem executados. <a data-toggle="collapse"
-											data-parent="#accordion" href="#collapse6"
-											onclick="window.location = '#habilitarflash';">Clique aqui</a> e veja como
-										habilitá-lo no Chrome.<br><br>
-										<b>Observação:</b> O navegador Mozilla Firefox não está mais suportando a
-										tecnologia "Flash" e, por conta disso, alguns RED podem não funcionar neste
-										navegador.
-
-
-										<br><br>Também é recomendada a instalação do programa "Adobe Flash Player
-										Projector", compatível com o sistema do seu computador. Abaixo, segue um passo a
-										passo de como baixar e configurar o programa para a utilização dos recursos em
-										"Flash", caso deseje.<br><br>
+									<div class="panel-body corpoTexto"><br>É necessário a instalação do programa "Adobe Flash Player 
+										Projector", atente para versão compatível com o sistema operacional do seu computador (Windows, Mac ou Linux).<br>
+										Abaixo, segue um passo a passo de como baixar e configurar o programa para utilização dos recursos em "Flash".
+										<br><br>
 										<ol>
 											<li>Acesse o site <a
 													href="https://www.adobe.com/support/flashplayer/debug_downloads.html"
 													target="_blank" rel="noopener noreferrer">Adobe Flash Player</a>,
-												role para baixo até encontrar a opção de download apontada na imagem e
-												clique para fazer o download.</li><br>
+												role para baixo até encontrar a opção de download do Adobe Flash Player Projector Compatível 
+												com seu sistema operacional.</li><br>
 											<img src="img/duvidas/p1.png" class="imgTexto"><br><br><br>
 											<li>Selecione o local onde o arquivo será salvo e clique em salvar. Caso
 												essa janela não apareça, significa que o arquivo foi salvo no local
