ajuste nas dúvidas

--- a/athena/duvidas.html
+++ b/athena/duvidas.html
@@ -130,9 +130,9 @@
 											<li>Na pasta “recurso” estão todos os RED para computador. Basta abrir,
 												selecionar a disciplina e o ano desejado para encontrar todos os RED da
 												categoria escolhida.</li><br>
-											<img src="img/duvidas/t6.png" class="imgTexto"><br><br><br>
+											<img src="img/duvidas/t6.png" class="imgTexto"><br><br>
 											<a href="#downloadCompleto"><img src="img/paraTopoA.svg"
-													class="imgTexto"></a><br><br><br>
+													class="imgTexto"></a><br>
 										</ol>
 									</div>
 								</div>
@@ -218,9 +218,9 @@
 												Flash habilitado.</li><br>
 											<img src="img/duvidas/a6.png" class="imgTexto"><br><br>
 											<li>Pronto! Agora você já possui o RED selecionado em seu computador.</li>
-											<br><br><br>
+											<br><br>
 											<a href="#extrair"><img src="img/paraTopoA.svg"
-													class="imgTexto"></a><br><br><br>
+													class="imgTexto"></a><br>
 										</ol>
 									</div>
 								</div>
@@ -272,9 +272,9 @@
 												como baixá-lo para, em seguida, executar
 												o RED.
 											</li><br>
-											<img src="img/duvidas/a6.png" class="imgTexto"><br><br><br>
+											<img src="img/duvidas/a6.png" class="imgTexto"><br><br>
 											<a href="#downloadRecursos"><img src="img/paraTopoV.svg"
-													class="imgTexto"></a><br><br><br>
+													class="imgTexto"></a><br>
 										</ol>
 
 									</div>
@@ -346,9 +346,9 @@
 												Esse procedimento só é necessário ser feito uma vez. Após feito, para
 												abrir um RED nesse mesmo formato, basta clicar duas vezes no próprio
 												recurso.</li><br>
-											<img src="img/duvidas/p10.png" class="imgTexto"><br><br><br>
+											<img src="img/duvidas/p10.png" class="imgTexto"><br><br>
 											<a href="#flashprojector"><img src="img/paraTopoA.svg"
-													class="imgTexto"></a><br><br><br>
+													class="imgTexto"></a><br>
 										</ol>
 									</div>
 								</div>
