ajuste em um link

--- a/athena/duvidas.html
+++ b/athena/duvidas.html
@@ -319,7 +319,7 @@
 												padrão de download do seu computador.</li><br>
 											<img src="img/duvidas/p2.png" class="imgTexto"><br><br><br>
 											<li>Para configurar, usaremos, como exemplo, o RED "A História da Páscoa".
-												<a href="recursos/recurso/Portugues/1/ahistoriadapascoa.rar"
+												<a href="recursos/recurso/Portugues/1/ahistoriadapascoa.zip"
 													target="_blank">Clique aqui</a> para baixá-lo.
 											</li><br>
 											<li>Extraia o RED, clicando com o botão direito do arquivo baixado e
