--- a/athena/index.html
+++ b/athena/index.html
@@ -102,7 +102,7 @@
 							alt="Primero slide"></a>
 				</div>
 				<div class="carousel-item">
-					<a  href="apoio.html#referenciaSAEB"><img class="d-block w-100" src="img/home/carousel/02.png"
+					<a  href="apoio.html?id=referenciaSAEB"><img class="d-block w-100" src="img/home/carousel/02.png"
 							alt="Segundo slide"></a>
 				</div>
 				<div class="carousel-item">
