--- a/athena/duvidas.html
+++ b/athena/duvidas.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Dúvidas - Athena</title>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/gif" href="img/ico.gif">
@@ -153,8 +153,9 @@
 								<!--abre a caixa-->
 								<div class="panel-heading">
 									<h4 class="panel-title titulo4V">
-										<a id="habilitarflash" class="dropdown-toggle collapseColorV" data-toggle="collapse"
-											data-parent="#accordion" href="#collapse5">QUAL É O TAMANHO RECOMENDADO DE
+										<a id="habilitarflash" class="dropdown-toggle collapseColorV"
+											data-toggle="collapse" data-parent="#accordion" href="#collapse5">QUAL É O
+											TAMANHO RECOMENDADO DE
 											UM <i>PEN DRIVE</i> PARA O DOWNLOAD COMPLETO DO REPOSITÓRIO ATHENA?</a>
 									</h4>
 								</div>
@@ -180,8 +181,9 @@
 							<div class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
-									<h4 class="panel-title titulo4A"> <a id="extrair" class="dropdown-toggle collapseColorA"
-											data-toggle="collapse" data-parent="#accordion" href="#collapse2">COMO
+									<h4 class="panel-title titulo4A"> <a id="extrair"
+											class="dropdown-toggle collapseColorA" data-toggle="collapse"
+											data-parent="#accordion" href="#collapse2">COMO
 											EXTRAIR OS ARQUIVOS COM OS RED PARA COMPUTADOR APÓS O DOWNLOAD?</a>
 									</h4>
 								</div>
@@ -219,8 +221,7 @@
 											<img src="img/duvidas/a6.png" class="imgTexto"><br><br>
 											<li>Pronto! Agora você já possui o RED selecionado em seu computador.</li>
 											<br><br>
-											<a href="#extrair"><img src="img/paraTopoA.svg"
-													class="imgTexto"></a><br>
+											<a href="#extrair"><img src="img/paraTopoA.svg" class="imgTexto"></a><br>
 										</ol>
 									</div>
 								</div>
@@ -237,12 +238,13 @@
 							</div>
 						</div>
 						<div class="col-sm-10">
-							<div  class="panel panel-default boxie">
+							<div class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
 									<h4 class="panel-title titulo4V">
-										<a id="downloadRecursos" class="dropdown-toggle collapseColorV" data-toggle="collapse"
-											data-parent="#accordion" href="#collapse1">COMO POSSO FAZER O DOWNLOAD DOS
+										<a id="downloadRecursos" class="dropdown-toggle collapseColorV"
+											data-toggle="collapse" data-parent="#accordion" href="#collapse1">COMO POSSO
+											FAZER O DOWNLOAD DOS
 											RECURSOS PARA COMPUTADOR?</a>
 									</h4>
 								</div>
@@ -292,7 +294,7 @@
 							</div>
 						</div>
 						<div class="col-sm-10">
-							<div  class="panel panel-default boxie">
+							<div class="panel panel-default boxie">
 								<!--abre a caixa-->
 								<div class="panel-heading">
 									<h4 class="panel-title titulo4A"> <a id="flashprojector"
@@ -303,15 +305,19 @@
 									</h4>
 								</div>
 								<div id="collapse4" class="panel-collapse collapse in">
-									<div class="panel-body corpoTexto"><br>É necessário a instalação do programa "Adobe Flash Player 
-										Projector", atente para versão compatível com o sistema operacional do seu computador (Windows, Mac ou Linux).<br>
-										Abaixo, segue um passo a passo de como baixar e configurar o programa para utilização dos recursos em "Flash".
+									<div class="panel-body corpoTexto"><br>É necessário a instalação do programa "Adobe
+										Flash Player
+										Projector", atente para versão compatível com o sistema operacional do seu
+										computador (Windows, Mac ou Linux).<br>
+										Abaixo, segue um passo a passo de como baixar e configurar o programa para
+										utilização dos recursos em "Flash".
 										<br><br>
 										<ol>
 											<li>Acesse o site <a
 													href="https://www.adobe.com/support/flashplayer/debug_downloads.html"
 													target="_blank" rel="noopener noreferrer">Adobe Flash Player</a>,
-												role para baixo até encontrar a opção de download do Adobe Flash Player Projector Compatível 
+												role para baixo até encontrar a opção de download do Adobe Flash Player
+												Projector Compatível
 												com seu sistema operacional.</li><br>
 											<img src="img/duvidas/p1.png" class="imgTexto"><br><br><br>
 											<li>Selecione o local onde o arquivo será salvo e clique em salvar. Caso
