Links interativos footer

--- a/athena/duvidas.html
+++ b/athena/duvidas.html
@@ -387,6 +387,7 @@
 										Repositório Athena podem, eventualmente, aparecer inativos. Buscando manter o
 										repositório sempre atualizado, os links são constantemente revisados, de forma a
 										manter no repositório somente aplicativos disponíveis na Play Store.<br>
+										Caso o aplicativo selecionado apresente algum erro, informe nossa equipe: athena@virtual.ufc.br.
 									</div>
 								</div>
 							</div>
@@ -428,10 +429,10 @@
 				<div class="col-sm-3" id="logosSocialNetworks">
 					<div class="row">
 						<div class="col-sm-4">
-							<a href="#"><img src="img/footer/fb.png" /></a>
+							<a href="https://www.facebook.com/proativaufc" target="_blank"><img src="img/footer/fb.png" /></a>
 						</div>
 						<div class="col-sm-4">
-							<a href="#"><img src="img/footer/ig.png" /></a>
+							<a href="https://www.instagram.com/proativa_ufc/" target="_blank"><img src="img/footer/ig.png" /></a>
 						</div>
 						<div class="col-sm-4">
 							<a href="#"><img src="img/footer/tt.png" /></a>
