--- a/athena/sobre.html
+++ b/athena/sobre.html
@@ -129,13 +129,13 @@
 					<div class="col-sm-3" id="logosSocialNetworks">
 						<div class="row">
 							<div class="col-sm-4">
-								<a href="#"><img src="img/footer/fb.png"/></a>
+								<a href="https://www.facebook.com/proativaufc" target="_blank"><img src="img/footer/fb.png" /></a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#"><img src="img/footer/ig.png"/></a>
+								<a href="https://www.instagram.com/proativa_ufc/" target="_blank"><img src="img/footer/ig.png" /></a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#"><img src="img/footer/tt.png"/></a>
+								<a href="#"><img src="img/footer/tt.png" /></a>
 							</div>
 						</div>
 					</div>	
