--- a/athena/buscaandroid.html
+++ b/athena/buscaandroid.html
@@ -238,13 +238,13 @@
 					<div class="col-sm-5" id="logosInst">
 						<div class="row">
 							<div class="col-sm-4">
-								<a href="#"><img src="img/footer/ufc.png"/></a>
+								<a href="https://www.facebook.com/proativaufc" target="_blank"><img src="img/footer/fb.png" /></a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#"><img src="img/footer/virtual.png"/></a>
+								<a href="https://www.instagram.com/proativa_ufc/" target="_blank"><img src="img/footer/ig.png" /></a>
 							</div>
 							<div class="col-sm-4">
-								<a href="#"><img src="img/footer/proativa.png"/></a>
+								<a href="#"><img src="img/footer/tt.png" /></a>
 							</div>
 						</div>
 					</div>
