--- a/athena/index.html
+++ b/athena/index.html
@@ -309,10 +309,10 @@
 				<div class="col-sm-3" id="logosSocialNetworks">
 					<div class="row">
 						<div class="col-sm-4">
-							<a href="#"><img src="img/footer/fb.png" /></a>
+							<a href="https://www.facebook.com/proativaufc" target="_blank"><img src="img/footer/fb.png" /></a>
 						</div>
 						<div class="col-sm-4">
-							<a href="#"><img src="img/footer/ig.png" /></a>
+							<a href="https://www.instagram.com/proativa_ufc/" target="_blank"><img src="img/footer/ig.png" /></a>
 						</div>
 						<div class="col-sm-4">
 							<a href="#"><img src="img/footer/tt.png" /></a>
