--- a/athena/duvidas.html
+++ b/athena/duvidas.html
@@ -216,8 +216,7 @@
 											<li>Para extrair o RED, clique com o botão direito no arquivo baixado e
 												selecione a opção “Extrair aqui”.</li><br>
 											<img src="img/duvidas/a5.png" class="imgTexto"><br><br><br>
-											<li> Abra o RED, utilizando o Adobe Flash Projector ou um navegador com o
-												Flash habilitado.</li><br>
+											<li> Abra o RED, utilizando o Adobe Flash Projector.</li><br>
 											<img src="img/duvidas/a6.png" class="imgTexto"><br><br>
 											<li>Pronto! Agora você já possui o RED selecionado em seu computador.</li>
 											<br><br>
