mudança de arquivos tsv para json

--- a/athena/resultadobuscaand.html
+++ b/athena/resultadobuscaand.html
@@ -226,6 +226,7 @@
 		<script src="js/nav.js"></script>
 		<script src="js/home.js"></script>
 		<script src="js/buscaand.js"></script>
+		<script src="data/recursos_mobile.js"></script>
 		<script src="js/buscaavancadaand.js"></script>
 	</body>
 </html>
