--- a/athena/recursocomputador.html
+++ b/athena/recursocomputador.html
@@ -182,6 +182,7 @@
 		<script src="js/nav.js"></script>
 		<script src="js/home.js"></script>
 		<script src="js/buscarecurso.js"></script>
+		<script src="data/recursos_pc.js"></script>
 		<script type="text/javascript">
 
 		</script>
