--- a/athena/recursomobile.html
+++ b/athena/recursomobile.html
@@ -174,6 +174,7 @@
 		<script src="js/sweetalert2.all.min.js"></script>
 		<script src="js/nav.js"></script>
 		<script src="js/home.js"></script>
+		<script src="data/recursos_mobile.js"></script>
 		<script src="js/buscarecursoand.js"></script>
 	</body>
 </html>
