--- a/athena/resultadobuscapc.html
+++ b/athena/resultadobuscapc.html
@@ -225,6 +225,7 @@
 		<script src="js/nav.js"></script>
 		<script src="js/home.js"></script>
 		<script src="js/buscapc.js"></script>
+		<script src="data/recursos_pc.js"></script>
 		<script src="js/buscaavancadapc.js"></script>
 	</body>
 </html>
