criada página de novo planos de aula

--- a/athena/index.html
+++ b/athena/index.html
@@ -36,6 +36,9 @@
 						</div>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="planosdeaula\novoplano.html">PLANOS DE AULA</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="apoio.html">MATERIAL DE APOIO</a>
 					</li>
 					<li class="nav-item">
