Corrigido alinhamento botão play store

--- a/athena/recursomobile.html
+++ b/athena/recursomobile.html
@@ -94,7 +94,9 @@
 			</div>
 			<div class="row alinhamentoImgBtn">
 				<div class="col-sm-4">
-					<a href="" id="linkRecurso" class="btn btn-secondary botao">Ir para a PlayStore <img class="play" src="img/play.png"></a>
+					<div class="caixaBtn">
+						<a href="" id="linkRecurso" class="btn btn-secondary botao">Ir para a PlayStore <img class="play" src="img/play.png"></a>
+					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="caixaBtn">
