Atualização apps matemática

--- a/athena/index.html
+++ b/athena/index.html
@@ -138,7 +138,7 @@
 				<img id="botaosliderEsquerda" onclick="scrollToLeft('#randroidcontainer')"
 					src="img/home/esquerda.png" />
 			</div>
-			<div class="col-sm-10">
+			<div class="col-sm-10 align-items-center">
 				<div id="randroidcontainer">
 					<div id="scrollbarandroid">
 						<div id="recursoA1" class="itemandroid item" onclick="pageAnd(0)">
